Add 404 page and style to index.html

--- a/404.html
+++ b/404.html
@@ -14,8 +14,8 @@
     <title></title>
   </head>
 <body>
-    <h1>detonator-man github.io</h1>
-    <p>Hello World!</p>
+    <h1>404 page</h1>
+    <p>The page you requested could not be found!</p>
     <img src="Fish_idle.gif" alt="Fish can roll" width="64" height="68">
 </body>
 </html>
